--- a/notebooks/AM_prepareData.ipynb
+++ b/notebooks/AM_prepareData.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create list of all files to cut"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -51,6 +58,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load example file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -64,8 +78,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find strategy to cut the file\n",
+    "We want to cut files to smaller pieces of the desired size (5 seconds in example), and stride of 1 second. Stride tells us how different pieces of files will overlap at each other."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -86,14 +108,12 @@
     }
    ],
    "source": [
-    "size = 5\n",
-    "stride = 1\n",
+    "size = {'desired': 5, 'minimum': 3, 'stride' : 1} # stride should not be bigger than desired length\n",
+    "endTime = 0\n",
     "\n",
-    "endTime=0\n",
-    "\n",
-    "for startTime in range(0,int(len(signal)/sr),size-stride):\n",
+    "for startTime in range(0,int(len(signal)/sr),size['desired']-size['stride']):\n",
     "    startTime = startTime \n",
-    "    endTime = startTime + size \n",
+    "    endTime = startTime + size['desired']\n",
     "    start = int(startTime*sr)\n",
     "    end = int(endTime*sr)\n",
     "    print('New file...',start/sr,' - ',end/sr)\n",
